--- a/analog/index.html
+++ b/analog/index.html
@@ -4,7 +4,8 @@
 <title>Boxes</title>
 <link rel="stylesheet" type="text/css" href="css/anaCSS.css">
 </head>
-<body> 
+<body>
+ 
 <div id="page">
 <div id="logo">
 <img src="images/logggo.jpg" alt="The Digital Specialists" />
@@ -21,8 +22,9 @@
 and Wurlitzer EP200" />
 </p>
 <p>
-We specialize in the sale and repair of classic keyboards, in 
-particular the Fender Rhodes, Wurlitzer EP200, and Hohner Clavinet.
+Explore a world of musical wonder with our curated selection of grand pianos,
+  digital keyboards, and accessories. Find your perfect harmony with pianos that 
+  blend tradition with innovation.
 </p>
 </div>
 </body>
