--- a/index.html
+++ b/index.html
@@ -18,8 +18,8 @@
 <li><a href="#">Contact</a></li>
 </ul>
 <p>
-<img src="images/keysss.jpg" alt="Fender Rhodes, Hohner Clavinet, 
-and Wurlitzer EP200" />
+<img src="images/keysss.jpg" alt= "Grand pianos,
+  digital keyboards"/>
 </p>
 <p>
 Explore a world of musical wonder with our curated selection of grand pianos,
