--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 </ul>
 <p>
 <img src="images/keysss.jpg" alt= "Grand pianos,
-  digital keyboards"/>
+  Digital keyboards"/>
 </p>
 <p>
 Explore a world of musical wonder with our curated selection of grand pianos,
